--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/simors/HLifePayment/issues"
   },
-  "homepage": "https://github.com/simors/HLifePayment#readme"
+  "homepage": "https://github.com/simors/HLifePayment#readme",
+  "dependencies": {
+    "express": "^4.15.2"
+  }
 }
